--- a/StyleTuristando.css
+++ b/StyleTuristando.css
@@ -30,3 +30,35 @@ h1 a:hover{
 	background-color: #7E9F19;
 	color: #FFF;
 }
+.place img{
+	border: 1px solid #7E9F19;
+	float: left;
+	margin: 10px 10px 0 0;
+	padding: 2px
+}
+.clear{
+	clear: both;
+}
+.footer{
+	font-size: 12px;
+	text-align: center;
+
+}
+.sidebar{
+	background-color: #FFF;
+	border: 1px solid #C9BC8F;
+	float: right;
+	padding: 10px;
+	width: 360px;
+}
+.sidebar h3{
+	font-size: 14px;
+	margin-top: 0;
+}
+.sidebar ul{
+	font-size: 12px;
+}
+.places{
+	float: left;
+	width: 660px;
+}
