--- a/StyleTuristando.css
+++ b/StyleTuristando.css
@@ -44,18 +44,18 @@ h1 a:hover{
 	text-align: center;
 
 }
-.sidebar{
+.sidenote{
 	background-color: #FFF;
 	border: 1px solid #C9BC8F;
 	float: right;
 	padding: 10px;
 	width: 360px;
 }
-.sidebar h3{
+.sidenote h3{
 	font-size: 14px;
 	margin-top: 0;
 }
-.sidebar ul{
+.sidenote ul{
 	font-size: 12px;
 }
 .places{
