--- a/StyleTuristando.css
+++ b/StyleTuristando.css
@@ -14,10 +14,39 @@ article{
 	margin-bottom: 20px;
 	padding: 10px;
 }
-article h2{
+
+h2 {
+	background-color: #ccc6c6;
+	padding: 5px 0;
+	left: -20px;
+	right: +20px;
+	position: relative;
+	text-align: center;
+	width: 679px;
 	border-bottom: 1px dashed #7E9F19;
-	margin: 0;
+	margin: 0; 
 }
+
+h2::before { 
+	border-color: transparent #ccc6c6 #ccc6c6 transparent;
+	border-style: solid;
+	border-width: 5px;
+	content: '';
+	left: 0;
+	position: absolute;
+	top: -10px;
+}
+
+h2::after {
+	border-color: transparent transparent #ccc6c6 #ccc6c6;
+	border-style: solid;
+	border-width: 5px;
+	content: '';
+	position: absolute;
+	right: 0;
+	top: -10px;
+}
+
 article a{
 	color: #2C88A7;
 	font-weight: bold;
@@ -62,3 +91,5 @@ section{
 	float: left;
 	width: 660px;
 }
+
+
